@@ -1,9 +1,11 @@
-// $Id: INSTALL.txt,v 1.4.4.1 2010/05/22 14:16:08 mikestefff Exp $
+// $Id: INSTALL.txt,v 1.4.4.2 2010/07/16 00:36:48 mikestefff Exp $
 Readme
 ------
 
 The Shoutbox module provides a block where visitors can quickly post short messages. 
 Permissions can be set so that posts go live immediately or go to a moderation queue.
+
+** The translations are NOT SUPPORTED in the 2.x branch yet! **
 
 Requirements
 ------------
@@ -38,6 +40,7 @@ Benjamin Shell <drupal@benjaminshell.com>
 
 Maintainers
 -----------
+mikestefff
 disterics 
 snpower
 
