@@ -5,9 +5,9 @@ description = Extends shoutbox functionality to organic groups
 dependencies[] = og
 dependencies[] = shoutbox
 
-; Information added by drupal.org packaging script on 2010-07-02
-version = "6.x-2.0"
+; Information added by drupal.org packaging script on 2010-07-16
+version = "6.x-2.1"
 core = "6.x"
 project = "shoutbox"
-datestamp = "1278109208"
+datestamp = "1279241107"
 
