@@ -1,3 +1,13 @@
+15 JULY 2010:
+-------------
+* Revamped for a 2.x release
+* Contains many bug fixes, efficiency fixes, and patched security holes
+* Much improved theme and theming support
+* Removed unnecessary fields and options when shouting
+* Introduced a number of helpful admin settings
+* Introduction of the Shoutbox Group module which integrates with Organic Groups
+* And much more..
+
 15 JULY 2008:
 -------------
 * Updated to Drupal 6.x
